// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: #3722ed !important;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="menu"
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-DropdownMenuDisclosure"
  orientation="vertical"
  role="button"
  tabindex="0"
>
  Actions
</div>
`;

exports[`overrides DropdownMenu.Disclosure.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="menu"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DropdownMenuDisclosure"
  orientation="vertical"
  role="button"
  tabindex="0"
>
  Actions
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="menu"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DropdownMenuDisclosure"
  orientation="vertical"
  role="button"
  tabindex="0"
>
  Actions
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: red !important;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="menu"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DropdownMenuDisclosure"
  orientation="vertical"
  role="button"
  tabindex="0"
>
  Actions
</div>
`;

exports[`theming DropdownMenu.Disclosure.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="menu"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DropdownMenuDisclosure"
  orientation="vertical"
  role="button"
  tabindex="0"
>
  Actions
</div>
`;
